--- a/index.html
+++ b/index.html
@@ -110,10 +110,14 @@
         </div>
         <!-- 回答错误时，展示对比，回答正确时，也展示正确的单词写法 -->
         <div id="compare">
-            this is test
+            <!-- this is test -->
         </div>
+
         <button class="continue" id="continue">continue</button>
     </div>
     <script src="script.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
