--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
     <script src="script.js"></script>
     <script>
-        
+        console.log(BUCH_EINHEIT );
     </script>
 </body>
 </html>
