add check button

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
             </p>
             <!-- <textarea name="answer_example" id="answer_example" cols="50"  rows="4"></textarea> -->
         </div>
+
+        <!-- 下面是点击进行检查的按钮 -->
+        <div style="width: 100%; margin-top: 20px; align-items: center; display: flex; flex-direction: column;">
+            <button id="check_button" onclick="check_word()">
+                check
+            </button>
+        </div>
     </div>
 
     <div id="check_result" class="check_result">
