样式更新及bug修复

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <!-- 下面这个显示例句 -->
         <div style="margin-top: 30px;">
-            <p id="example" style="padding: 10px 5px;color: wheat;font-size: 25px;">
+            <p id="example" >
                 <span>例句:</span>
                 <span id="word_example" style="margin-left: 5px;"></span>
             </p>
