添加进度条

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
     </div>
     
     <div id="down" >
+        <!-- 进度条 -->
+        <div class="progress_container">
+            <div id="div_progress_bar" class="progress_bar">
+                <div class="progress_bar_shadow"></div>
+            </div>
+        </div>
         <!-- 中文翻译 -->
         <div style="padding:10px 0">
             <!-- 这里显示中文信息 -->
