before modify play() function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vokabeln</title>
     
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="Woerter/Woeter.js"></script> -->
+    <!-- 将单词作为类包含进来 -->
     <script src="Woerter/current_einheits.js"></script>
     <script src="Woerter/B1E1.js"></script>
     <script src="Woerter/B1E10.js"></script>
@@ -34,7 +34,6 @@
     <script src="Woerter/B3E3.js"></script>
     <script src="Woerter/B3E4.js"></script>
     <script src="Woerter/B3E5.js"></script>
-    <!-- 导入 bootstrap 包 -->
     
 </head>
 <body>
